--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -349,7 +349,7 @@
     <string name="nfc_write_failed">Schreiben des Tags fehlgeschlagen!</string>
     <string name="nfc_write_successful">Tag erfolgreich geschrieben</string>
     <string name="nfc_tag_unsupported">Tag unterstützt NDEF nicht!</string>
-    <string name="nfc_tag_size">Tag bietet %d Bytes, aber wir benötigen %d!</string>
+    <string name="nfc_tag_size">Tag bietet %1$d Bytes, aber wir brauchen %2$d!</string>
     <string name="nfc_tag_read_undef">Ich verstehe den Tag nicht!</string>
     <string name="nfc_tag_read_what">Ich weiß nicht, was du willst!</string>
     <string name="nfc_tag_read_success">Tag erfolgreich gelesen</string>
