--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -341,7 +341,7 @@
     <string name="nfc_write_failed">Sikertelen címkeírás!</string>
     <string name="nfc_write_successful">Sikeres címkeírás</string>
     <string name="nfc_tag_unsupported">A címke nem támogatja az NDEF-et!</string>
-    <string name="nfc_tag_size">A címke %d byte-os, de %d kellene!</string>
+    <string name="nfc_tag_size">A címke %1$d byte-os, de %2$d kellene!</string>
     <string name="nfc_tag_read_undef">Nem értem a címkét!</string>
     <string name="nfc_tag_read_what">Nem tudom, mit akarsz!</string>
     <string name="nfc_tag_read_success">Sikeres címkeolvasás</string>
