--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -342,7 +342,7 @@
     <string name="nfc_write_failed">Scrittura tag fallita!</string>
     <string name="nfc_write_successful">Scrittura tag riuscita</string>
     <string name="nfc_tag_unsupported">La tag non supporta NDEF!</string>
-    <string name="nfc_tag_size">La Tag fornisce %d bytes, ma ne servono %d!</string>
+    <string name="nfc_tag_size">La Tag fornisce %1$d bytes, ma ne servono %2$d!</string>
     <string name="nfc_tag_read_undef">Non capisco la Tag!</string>
     <string name="nfc_tag_read_what">Non capisco cosa mi hai chiesto!</string>
     <string name="nfc_tag_read_success">Lettura tag riuscita</string>
