--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -339,7 +339,7 @@
     <string name="nfc_write_failed">NFC 標籤寫入失敗！</string>
     <string name="nfc_write_successful">NFC 標籤寫入成功</string>
     <string name="nfc_tag_unsupported">此 NFC 標籤不支援 NDEF 格式！</string>
-    <string name="nfc_tag_size">此 NFC 標籤可存放 %d 位元組，但需要 %d 位元組！</string>
+    <string name="nfc_tag_size">此 NFC 標籤可存放 %1$d 位元組，但需要 %2$d 位元組！</string>
     <string name="nfc_tag_read_undef">無法辨識此 NFC 標籤！</string>
     <string name="nfc_tag_read_what">無法執行此 NFC 標籤的操作！</string>
     <string name="nfc_tag_read_success">已成功讀取此 NFC 標籤</string>
