--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -344,4 +344,11 @@
     <string name="nfc_tag_read_what">Ik weet niet wat je wilt!</string>
     <string name="nfc_tag_read_success">Tag is gelezen</string>
     <string name="nfc_tag_tap">NFC beschikbaar!</string>
+
+    <string name="receive_desc_hint">Description (optional)</string>
+
+    <string name="send_address_not_openalias">OpenAlias address not available</string>
+    <string name="send_address_openalias">OpenAlias secure &#x2714;</string>
+    <string name="send_address_resolve_openalias">Resolving OpenAlias&#8230;</string>
+    <string name="send_address_no_dnssec">OpenAlias without DNSSEC - address may be spoofed</string>
 </resources>
