--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -353,5 +353,5 @@
     <string name="send_address_no_dnssec">OpenAlias bez DNSSEC - adresa môže byť zneužitá</string>
     <string name="send_address_hint">Prijímateľova XMR/BTC Adresa alebo OpenAlias</string>
 
-    <string name="status_wallet_connect_wrongversion">Node version incompatible!</string>
+    <string name="status_wallet_connect_wrongversion">Node version incompatible - please upgrade!</string>
 </resources>
